--- a/src/components/HowItWorks.css
+++ b/src/components/HowItWorks.css
@@ -43,6 +43,18 @@
     font-size: 1.2rem;
     font-weight: 500;
   }
+
+  @media (max-width: 1024px) {
+    /* .image-column{
+      width:80%;
+    }
+    .image-placeholder{
+      width:80%;
+    } */
+    .how-it-works-image{
+      width:80%;
+    }
+    }
   
   .image-placeholder:hover {
     transform: translateY(-5px);
