--- a/src/index.css
+++ b/src/index.css
@@ -27,10 +27,11 @@ body {
   padding: 0;
   overflow-x: hidden;
   margin: 0;
-  display: flex;
-  place-items: center;
+  /* display: flex; */
+  /* place-items: center; */
   min-width: 100vw;
   min-height: 100vh;
+  /* overflow-x: hidden; */
 }
 
 h1 {
